2007-02-15  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc (initialize): Move all options parsing here including
	output file name.  Add new option to specify a file whose
	existence triggers an intermediate profile dump.
	(profileReadHunk): Don't shadow "fd" variable name.
	(profileListenThread): Dump if profile dump trigger file exists.
	(dump): Remove parsing of profile options, now in initialisation.
	Disable leak map output, it's currently just waste of space.

	* IgProfPerf.cc (profileSignalHandler): Drop one less frame from
	the bottom of the stack.  Not sure if this was changed with the
	IgHookTrace::stacktrace() improvements, but definitely now better.
	(enableSignalHandler): Use sigaction(SA_RESTART), not signal().

	* IgProfPool.cc: Initialise two mappings in constructor so we
	initially have a buffer to swap to when the first buffer fills up.
	Rationale is to avoid anything even potentially fragile.

	* igprof: Add support for option "-z" for simpler output file
	compression and "-D" option to specify a flag file to trigger
	an intermediate profile output dump.

2007-02-12  Lassi A. Tuura  <lat@iki.fi>

	* test/test_load.cc: Try to push the system harder with deeper
	stacks and more aggressive allocation rate.  Still no match to
	Geant4 however, have not been able to overflow the profile pools
	with this test.

	* igprof: Accept new option -T to set temporary directory for
	intermediate data files.  In extreme cases several gigabytes may
	need to be allocated  and it's not appropriate to fill /tmp.

	* IgProf.cc (pool): Do not check thread id when no threads used.
	(profileReadHunk): Reset "node" when returning from nested pool.
	(debug): Print current time after process id.
	(dump): No more need to print out how long the dump took.
	
	* IgProfFileDesc.cc, IgProfMem.cc, IgProfPerf.cc
	(add, profileSignalHandler): Allow deeper stacks, ROOT seems to
	indulge some very deep ones.  Mark the functions calling stack